feat: refinando fluxo de comandas