@@ -45,6 +45,7 @@ import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
@@ -64,35 +65,78 @@ public class RestaurantOrderService {
 
     @Transactional(readOnly = true)
     public List<RestaurantOrderResponse> listAll() {
-        List<RestaurantOrder> orders = orderRepository.findAllByOrderByCreatedAtDesc(PageRequest.of(0, 100))
-                .stream()
-                .filter(this::canCurrentUserAccess)
-                .toList();
-        if (orders.isEmpty()) return List.of();
+        ensureOperationalAccess();
+
+        List<RestaurantOrder> orders = orderRepository
+                .findAllByOrderByCreatedAtDesc(PageRequest.of(0, 100));
+
+        if (orders.isEmpty()) {
+            return List.of();
+        }
+
         Map<Long, List<OrderItem>> itemsByOrder = orderItemRepository
-                .findAllByOrderIdIn(orders.stream().map(RestaurantOrder::getId).toList())
+                .findAllByOrderIdIn(
+                        orders.stream()
+                                .map(RestaurantOrder::getId)
+                                .toList()
+                )
                 .stream()
-                .collect(Collectors.groupingBy(item -> item.getOrder().getId()));
+                .collect(
+                        Collectors.groupingBy(
+                                item -> item.getOrder().getId()
+                        )
+                );
+
         return orders.stream()
-                .map(order -> toResponse(order, itemsByOrder.getOrDefault(order.getId(), Collections.emptyList())))
+                .map(order -> toResponse(
+                        order,
+                        itemsByOrder.getOrDefault(
+                                order.getId(),
+                                Collections.emptyList()
+                        )
+                ))
                 .toList();
     }
 
     @Transactional(readOnly = true)
     public List<RestaurantOrderResponse> listByTabId(Long tabId) {
-        List<RestaurantOrder> orders = orderRepository.findAllByTabIdOrderByCreatedAtAsc(tabId);
-        if (orders.isEmpty()) return List.of();
+        ensureOperationalAccess();
+
+        List<RestaurantOrder> orders =
+                orderRepository.findAllByTabIdOrderByCreatedAtAsc(tabId);
+
+        if (orders.isEmpty()) {
+            return List.of();
+        }
+
         Map<Long, List<OrderItem>> itemsByOrder = orderItemRepository
-                .findAllByOrderIdIn(orders.stream().map(RestaurantOrder::getId).toList())
+                .findAllByOrderIdIn(
+                        orders.stream()
+                                .map(RestaurantOrder::getId)
+                                .toList()
+                )
                 .stream()
-                .collect(Collectors.groupingBy(item -> item.getOrder().getId()));
+                .collect(
+                        Collectors.groupingBy(
+                                item -> item.getOrder().getId()
+                        )
+                );
+
         return orders.stream()
-                .map(order -> toResponse(order, itemsByOrder.getOrDefault(order.getId(), Collections.emptyList())))
+                .map(order -> toResponse(
+                        order,
+                        itemsByOrder.getOrDefault(
+                                order.getId(),
+                                Collections.emptyList()
+                        )
+                ))
                 .toList();
     }
 
     @Transactional(readOnly = true)
     public List<RestaurantOrderResponse> listPreparationQueue() {
+        ensureOperationalAccess();
+
         List<OrderItem> queueItems = orderItemRepository
                 .findAllByPreparationFlowSnapshotAndStatusInOrderByCreatedAtAsc(
                         PreparationFlow.REQUIRES_PREPARATION,
@@ -102,105 +146,197 @@ public class RestaurantOrderService {
                                 OrderItemStatus.READY
                         )
                 );
+
         Map<Long, List<OrderItem>> itemsByOrder = queueItems.stream()
-                .collect(Collectors.groupingBy(
-                        item -> item.getOrder().getId(),
-                        LinkedHashMap::new,
-                        Collectors.toList()
-                ));
-        return itemsByOrder.values().stream()
-                .map(items -> toResponse(items.get(0).getOrder(), items))
+                .collect(
+                        Collectors.groupingBy(
+                                item -> item.getOrder().getId(),
+                                LinkedHashMap::new,
+                                Collectors.toList()
+                        )
+                );
+
+        return itemsByOrder.values()
+                .stream()
+                .map(items -> toResponse(
+                        items.getFirst().getOrder(),
+                        items
+                ))
                 .toList();
     }
 
     @Transactional(readOnly = true)
     public RestaurantOrderResponse getById(Long id) {
+        ensureOperationalAccess();
+
         RestaurantOrder order = findEntityById(id);
-        ensureCounterOperatorAccess(order.getTab());
-        return toResponse(order, orderItemRepository.findAllByOrderId(order.getId()));
+
+        return toResponse(
+                order,
+                orderItemRepository.findAllByOrderId(order.getId())
+        );
     }
 
     @Transactional
     public RestaurantOrderResponse create(RestaurantOrderRequest request) {
+        ensureOperationalAccess();
+
         Tab tab = tabRepository.findByIdForUpdate(request.tabId())
-                .orElseThrow(() -> new ResourceNotFoundException("Comanda não encontrada"));
-        ensureCounterOperatorAccess(tab);
+                .orElseThrow(
+                        () -> new ResourceNotFoundException(
+                                "Comanda não encontrada"
+                        )
+                );
+
         ensureTabCanReceiveOrder(tab);
+
         User createdByUser = currentUser();
 
-        RestaurantOrder order = orderRepository.save(RestaurantOrder.builder()
-                .tab(tab)
-                .createdByUser(createdByUser)
-                .status(OrderStatus.CREATED)
-                .type(orderTypeFor(tab))
-                .notes(normalizeOptional(request.notes()))
-                .build());
-        List<OrderItem> items = saveRequestedItems(order, request.items());
+        RestaurantOrder order = orderRepository.save(
+                RestaurantOrder.builder()
+                        .tab(tab)
+                        .createdByUser(createdByUser)
+                        .status(OrderStatus.CREATED)
+                        .type(orderTypeFor(tab))
+                        .notes(normalizeOptional(request.notes()))
+                        .build()
+        );
+
+        List<OrderItem> items = saveRequestedItems(
+                order,
+                request.items()
+        );
+
         accountingService.refreshAmounts(tab);
+
         return toResponse(order, items);
     }
 
     @Transactional
-    public RestaurantOrderResponse updateDraft(Long id, RestaurantOrderRequest request) {
+    public RestaurantOrderResponse updateDraft(
+            Long id,
+            RestaurantOrderRequest request
+    ) {
+        ensureOperationalAccess();
+
         RestaurantOrder order = findEntityByIdForUpdate(id);
-        ensureCounterOperatorAccess(order.getTab());
+
         ensureTabCanReceiveOrder(order.getTab());
+
         if (order.getStatus() != OrderStatus.CREATED) {
-            throw new BusinessException("Somente pedido em rascunho pode ser editado");
-        }
-        if (!order.getTab().getId().equals(request.tabId())) {
-            throw new BusinessException("Pedido não pode ser movido para outra comanda");
+            throw new BusinessException(
+                    "Somente pedido em rascunho pode ser editado"
+            );
         }
 
-        List<OrderItem> previousItems = orderItemRepository.findAllByOrderId(order.getId());
+        if (!order.getTab().getId().equals(request.tabId())) {
+            throw new BusinessException(
+                    "Pedido não pode ser movido para outra comanda"
+            );
+        }
+
+        List<OrderItem> previousItems =
+                orderItemRepository.findAllByOrderId(order.getId());
+
         orderItemRepository.deleteAll(previousItems);
         orderItemRepository.flush();
+
         order.setType(orderTypeFor(order.getTab()));
         order.setNotes(normalizeOptional(request.notes()));
-        List<OrderItem> items = saveRequestedItems(order, request.items());
+
+        List<OrderItem> items = saveRequestedItems(
+                order,
+                request.items()
+        );
+
         accountingService.refreshAmounts(order.getTab());
+
         return toResponse(order, items);
     }
 
     @Transactional
     public RestaurantOrderResponse confirm(Long id) {
+        ensureOperationalAccess();
+
         RestaurantOrder order = findEntityByIdForUpdate(id);
-        ensureCounterOperatorAccess(order.getTab());
+
         ensureTabCanReceiveOrder(order.getTab());
-        List<OrderItem> items = orderItemRepository.findAllByOrderId(order.getId());
+
+        List<OrderItem> items =
+                orderItemRepository.findAllByOrderId(order.getId());
 
         if (order.getStatus() != OrderStatus.CREATED) {
             if (order.getStatus() == OrderStatus.CANCELLED) {
-                throw new BusinessException("Pedido cancelado não pode ser confirmado");
+                throw new BusinessException(
+                        "Pedido cancelado não pode ser confirmado"
+                );
             }
+
             return toResponse(order, items);
         }
+
         List<OrderItem> draftItems = items.stream()
                 .filter(item -> item.getStatus() == OrderItemStatus.DRAFT)
                 .toList();
-        if (draftItems.isEmpty()) throw new BusinessException("Pedido precisa de pelo menos um item para ser confirmado");
+
+        if (draftItems.isEmpty()) {
+            throw new BusinessException(
+                    "Pedido precisa de pelo menos um item para ser confirmado"
+            );
+        }
 
         for (OrderItem item : draftItems) {
-            productVariantService.findSellableVariant(item.getProduct().getId(), item.getProductVariant().getId());
+            productVariantService.findSellableVariant(
+                    item.getProduct().getId(),
+                    item.getProductVariant().getId()
+            );
+
             productOptionService.validateSelections(
                     item.getProduct().getId(),
-                    item.getOptions().stream()
+                    item.getOptions()
+                            .stream()
                             .map(OrderItemOption::getProductOption)
-                            .map(option -> option == null ? null : option.getId())
-                            .filter(java.util.Objects::nonNull)
+                            .map(option ->
+                                    option == null
+                                            ? null
+                                            : option.getId()
+                            )
+                            .filter(Objects::nonNull)
                             .toList()
             );
         }
 
-        inventoryMovementService.applyAutomaticSaleMovements(order, draftItems);
-        draftItems.forEach(item -> item.setStatus(
-                item.getPreparationFlowSnapshot() == PreparationFlow.DIRECT_SERVICE
-                        ? OrderItemStatus.READY
-                        : OrderItemStatus.WAITING_PREPARATION
-        ));
+        inventoryMovementService.applyAutomaticSaleMovements(
+                order,
+                draftItems
+        );
+
+        draftItems.forEach(item -> {
+            if (
+                    item.getPreparationFlowSnapshot()
+                            == PreparationFlow.DIRECT_SERVICE
+            ) {
+                item.setStatus(OrderItemStatus.READY);
+                return;
+            }
+
+            if (order.getTab().getType() == TabType.TABLE) {
+                item.setStatus(OrderItemStatus.IN_PREPARATION);
+                return;
+            }
+
+            item.setStatus(OrderItemStatus.WAITING_PREPARATION);
+        });
+
         order.setConfirmedAt(LocalDateTime.now());
-        preparationWorkflowService.refreshOrderStatus(order, items);
+
+        preparationWorkflowService.refreshOrderStatus(
+                order,
+                items
+        );
+
         accountingService.refreshAmounts(order.getTab());
+
         return toResponse(order, items);
     }
 
@@ -210,141 +346,340 @@ public class RestaurantOrderService {
     }
 
     @Transactional
-    public RestaurantOrderResponse updateItemStatus(Long orderId, Long itemId, OrderItemStatusRequest request) {
+    public RestaurantOrderResponse updateItemStatus(
+            Long orderId,
+            Long itemId,
+            OrderItemStatusRequest request
+    ) {
+        ensureOperationalAccess();
+
         RestaurantOrder order = findEntityByIdForUpdate(orderId);
+
         ensureOrderTabOpen(order);
-        OrderItem item = orderItemRepository.findByIdAndOrderId(itemId, orderId)
-                .orElseThrow(() -> new ResourceNotFoundException("Item do pedido não encontrado"));
+
+        OrderItem item = orderItemRepository
+                .findByIdAndOrderId(itemId, orderId)
+                .orElseThrow(
+                        () -> new ResourceNotFoundException(
+                                "Item do pedido não encontrado"
+                        )
+                );
+
         OrderItemStatus expected = switch (item.getStatus()) {
-            case WAITING_PREPARATION -> OrderItemStatus.IN_PREPARATION;
-            case IN_PREPARATION -> OrderItemStatus.READY;
-            case READY -> OrderItemStatus.DELIVERED;
+            case WAITING_PREPARATION ->
+                    OrderItemStatus.IN_PREPARATION;
+
+            case IN_PREPARATION ->
+                    OrderItemStatus.READY;
+
+            case READY ->
+                    OrderItemStatus.DELIVERED;
+
             default -> null;
         };
-        if (expected == null || request.status() != expected) {
-            throw new BusinessException("Transição de preparo do item não permitida");
+
+        if (
+                expected == null ||
+                        request.status() != expected
+        ) {
+            throw new BusinessException(
+                    "Transição de preparo do item não permitida"
+            );
         }
-        if ((request.status() == OrderItemStatus.IN_PREPARATION || request.status() == OrderItemStatus.READY)
-                && item.getPreparationFlowSnapshot() != PreparationFlow.REQUIRES_PREPARATION) {
-            throw new BusinessException("Item de entrega direta não pertence à fila de preparo");
+
+        if (
+                (
+                        request.status()
+                                == OrderItemStatus.IN_PREPARATION ||
+                                request.status()
+                                        == OrderItemStatus.READY
+                ) &&
+                        item.getPreparationFlowSnapshot()
+                                != PreparationFlow.REQUIRES_PREPARATION
+        ) {
+            throw new BusinessException(
+                    "Item de entrega direta não pertence à fila de preparo"
+            );
         }
-        if (order.getTab().getType() == TabType.COUNTER
-                && request.status() == OrderItemStatus.IN_PREPARATION) {
-            throw new BusinessException("No balcão, o preparo começa automaticamente após o pagamento integral");
+
+        if (
+                order.getTab().getType() == TabType.COUNTER &&
+                        request.status() == OrderItemStatus.IN_PREPARATION
+        ) {
+            throw new BusinessException(
+                    "No balcão, o preparo começa automaticamente após o pagamento integral"
+            );
         }
-        ensureItemTransitionAccess(order, request.status());
+
         if (request.status() == OrderItemStatus.DELIVERED) {
             ensureCounterPaidBeforeDelivery(order.getTab());
         }
+
         item.setStatus(request.status());
-        List<OrderItem> items = orderItemRepository.findAllByOrderId(orderId);
-        preparationWorkflowService.refreshOrderStatus(order, items);
+
+        List<OrderItem> items =
+                orderItemRepository.findAllByOrderId(orderId);
+
+        preparationWorkflowService.refreshOrderStatus(
+                order,
+                items
+        );
+
         return toResponse(order, items);
     }
 
     @Transactional
-    public RestaurantOrderResponse updateStatus(Long id, OrderStatusRequest request) {
+    public RestaurantOrderResponse updateStatus(
+            Long id,
+            OrderStatusRequest request
+    ) {
+        ensureOperationalAccess();
+
         if (request.status() == OrderStatus.CANCELLED) {
-            throw new BusinessException("Use o cancelamento com motivo obrigatório");
+            throw new BusinessException(
+                    "Use o cancelamento com motivo obrigatório"
+            );
         }
-        if (request.status() == OrderStatus.SENT_TO_KITCHEN) return confirm(id);
+
+        if (request.status() == OrderStatus.SENT_TO_KITCHEN) {
+            return confirm(id);
+        }
 
         RestaurantOrder order = findEntityByIdForUpdate(id);
-        ensureCounterOperatorAccess(order.getTab());
+
         ensureOrderTabOpen(order);
+
         if (order.getStatus() == OrderStatus.CANCELLED) {
-            throw new BusinessException("Pedido cancelado não pode ter status alterado");
+            throw new BusinessException(
+                    "Pedido cancelado não pode ter status alterado"
+            );
         }
-        if (order.getTab().getType() == TabType.COUNTER && request.status() == OrderStatus.PREPARING) {
-            throw new BusinessException("No balcão, o preparo começa automaticamente após o pagamento integral");
+
+        if (
+                order.getTab().getType() == TabType.COUNTER &&
+                        request.status() == OrderStatus.PREPARING
+        ) {
+            throw new BusinessException(
+                    "No balcão, o preparo começa automaticamente após o pagamento integral"
+            );
         }
-        List<OrderItem> items = orderItemRepository.findAllByOrderId(order.getId());
+
+        List<OrderItem> items =
+                orderItemRepository.findAllByOrderId(order.getId());
+
         switch (request.status()) {
-            case PREPARING -> transitionAll(items, OrderItemStatus.WAITING_PREPARATION, OrderItemStatus.IN_PREPARATION);
-            case READY -> transitionAll(items, OrderItemStatus.IN_PREPARATION, OrderItemStatus.READY);
+            case PREPARING -> transitionAll(
+                    items,
+                    OrderItemStatus.WAITING_PREPARATION,
+                    OrderItemStatus.IN_PREPARATION
+            );
+
+            case READY -> transitionAll(
+                    items,
+                    OrderItemStatus.IN_PREPARATION,
+                    OrderItemStatus.READY
+            );
+
             case DELIVERED -> {
                 ensureCounterPaidBeforeDelivery(order.getTab());
-                if (items.stream().anyMatch(item -> item.getStatus() == OrderItemStatus.WAITING_PREPARATION
-                        || item.getStatus() == OrderItemStatus.IN_PREPARATION
-                        || item.getStatus() == OrderItemStatus.DRAFT)) {
-                    throw new BusinessException("Pedido ainda possui itens pendentes");
+
+                if (
+                        items.stream().anyMatch(item ->
+                                item.getStatus()
+                                        == OrderItemStatus.WAITING_PREPARATION ||
+                                        item.getStatus()
+                                                == OrderItemStatus.IN_PREPARATION ||
+                                        item.getStatus()
+                                                == OrderItemStatus.DRAFT
+                        )
+                ) {
+                    throw new BusinessException(
+                            "Pedido ainda possui itens pendentes"
+                    );
                 }
-                transitionAll(items, OrderItemStatus.READY, OrderItemStatus.DELIVERED);
+
+                transitionAll(
+                        items,
+                        OrderItemStatus.READY,
+                        OrderItemStatus.DELIVERED
+                );
             }
-            default -> throw new BusinessException("Transição de status do pedido não permitida");
+
+            default -> throw new BusinessException(
+                    "Transição de status do pedido não permitida"
+            );
         }
-        preparationWorkflowService.refreshOrderStatus(order, items);
+
+        preparationWorkflowService.refreshOrderStatus(
+                order,
+                items
+        );
+
         return toResponse(order, items);
     }
 
     @Transactional
-    public RestaurantOrderResponse cancel(Long id, OrderCancellationRequest request) {
+    public RestaurantOrderResponse cancel(
+            Long id,
+            OrderCancellationRequest request
+    ) {
+        ensureOperationalAccess();
+
         RestaurantOrder order = findEntityByIdForUpdate(id);
-        ensureCounterOperatorAccess(order.getTab());
-        Tab tab = tabRepository.findByIdForUpdate(order.getTab().getId())
-                .orElseThrow(() -> new ResourceNotFoundException("Comanda não encontrada"));
+
+        Tab tab = tabRepository
+                .findByIdForUpdate(order.getTab().getId())
+                .orElseThrow(
+                        () -> new ResourceNotFoundException(
+                                "Comanda não encontrada"
+                        )
+                );
+
         ensureCancelable(order, tab);
+
         String reason = request.reason().trim();
         User actor = currentUser();
 
         if (order.getStatus() == OrderStatus.CANCELLED) {
-            inventoryMovementService.reverseAutomaticSaleMovements(order, reason);
-            return toResponse(order, orderItemRepository.findAllByOrderId(order.getId()));
+            inventoryMovementService.reverseAutomaticSaleMovements(
+                    order,
+                    reason
+            );
+
+            return toResponse(
+                    order,
+                    orderItemRepository.findAllByOrderId(order.getId())
+            );
         }
 
-        List<OrderItem> items = orderItemRepository.findAllByOrderId(order.getId());
-        inventoryMovementService.reverseAutomaticSaleMovements(order, reason);
+        List<OrderItem> items =
+                orderItemRepository.findAllByOrderId(order.getId());
+
+        inventoryMovementService.reverseAutomaticSaleMovements(
+                order,
+                reason
+        );
+
         for (OrderItem item : items) {
-            if (item.getStatus() == OrderItemStatus.CANCELED) continue;
-            cancelItemState(item, reason, actor);
+            if (item.getStatus() == OrderItemStatus.CANCELED) {
+                continue;
+            }
+
+            cancelItemState(
+                    item,
+                    reason,
+                    actor
+            );
         }
+
         order.setStatus(OrderStatus.CANCELLED);
         order.setCancellationReason(reason);
         order.setCancelledByUser(actor);
+
         accountingService.refreshAmounts(tab);
+
         return toResponse(order, items);
     }
 
     @Transactional
-    public RestaurantOrderResponse cancelItem(Long orderId, Long itemId, OrderCancellationRequest request) {
+    public RestaurantOrderResponse cancelItem(
+            Long orderId,
+            Long itemId,
+            OrderCancellationRequest request
+    ) {
+        ensureOperationalAccess();
+
         RestaurantOrder order = findEntityByIdForUpdate(orderId);
-        ensureCounterOperatorAccess(order.getTab());
-        Tab tab = tabRepository.findByIdForUpdate(order.getTab().getId())
-                .orElseThrow(() -> new ResourceNotFoundException("Comanda não encontrada"));
+
+        Tab tab = tabRepository
+                .findByIdForUpdate(order.getTab().getId())
+                .orElseThrow(
+                        () -> new ResourceNotFoundException(
+                                "Comanda não encontrada"
+                        )
+                );
+
         ensureCancelable(order, tab);
-        OrderItem item = orderItemRepository.findByIdAndOrderId(itemId, orderId)
-                .orElseThrow(() -> new ResourceNotFoundException("Item do pedido não encontrado"));
+
+        OrderItem item = orderItemRepository
+                .findByIdAndOrderId(itemId, orderId)
+                .orElseThrow(
+                        () -> new ResourceNotFoundException(
+                                "Item do pedido não encontrado"
+                        )
+                );
+
         String reason = request.reason().trim();
 
         if (item.getStatus() != OrderItemStatus.CANCELED) {
-            inventoryMovementService.reverseAutomaticSaleMovements(order, item, reason);
-            cancelItemState(item, reason, currentUser());
+            inventoryMovementService.reverseAutomaticSaleMovements(
+                    order,
+                    item,
+                    reason
+            );
+
+            cancelItemState(
+                    item,
+                    reason,
+                    currentUser()
+            );
         }
-        List<OrderItem> items = orderItemRepository.findAllByOrderId(orderId);
-        preparationWorkflowService.refreshOrderStatus(order, items);
+
+        List<OrderItem> items =
+                orderItemRepository.findAllByOrderId(orderId);
+
+        preparationWorkflowService.refreshOrderStatus(
+                order,
+                items
+        );
+
         if (order.getStatus() == OrderStatus.CANCELLED) {
             order.setCancellationReason(reason);
             order.setCancelledByUser(currentUser());
         }
+
         accountingService.refreshAmounts(tab);
+
         return toResponse(order, items);
     }
 
-    private List<OrderItem> saveRequestedItems(RestaurantOrder order, List<OrderItemRequest> requests) {
+    private List<OrderItem> saveRequestedItems(
+            RestaurantOrder order,
+            List<OrderItemRequest> requests
+    ) {
         return requests.stream()
                 .map(request -> buildOrderItem(order, request))
                 .map(orderItemRepository::save)
                 .toList();
     }
 
-    private OrderItem buildOrderItem(RestaurantOrder order, OrderItemRequest request) {
-        ProductVariant variant = productVariantService.findSellableVariant(request.productId(), request.variantId());
+    private OrderItem buildOrderItem(
+            RestaurantOrder order,
+            OrderItemRequest request
+    ) {
+        ProductVariant variant =
+                productVariantService.findSellableVariant(
+                        request.productId(),
+                        request.variantId()
+                );
+
         Product product = variant.getProduct();
-        List<ProductOption> selectedOptions = productOptionService.validateSelections(product.getId(), request.optionIds());
+
+        List<ProductOption> selectedOptions =
+                productOptionService.validateSelections(
+                        product.getId(),
+                        request.optionIds()
+                );
+
         BigDecimal additionalPrice = selectedOptions.stream()
                 .map(ProductOption::getAdditionalPrice)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-        BigDecimal unitPrice = variant.getPrice().add(additionalPrice);
+                .reduce(
+                        BigDecimal.ZERO,
+                        BigDecimal::add
+                );
+
+        BigDecimal unitPrice =
+                variant.getPrice().add(additionalPrice);
 
         OrderItem item = OrderItem.builder()
                 .order(order)
@@ -352,61 +687,125 @@ public class RestaurantOrderService {
                 .productVariant(variant)
                 .productNameSnapshot(product.getName())
                 .productVariantNameSnapshot(variant.getName())
-                .categoryNameSnapshot(product.getCategory().getName())
-                .preparationFlowSnapshot(product.getPreparationFlow())
+                .categoryNameSnapshot(
+                        product.getCategory().getName()
+                )
+                .preparationFlowSnapshot(
+                        product.getPreparationFlow()
+                )
                 .unitPriceSnapshot(unitPrice)
                 .quantity(request.quantity())
                 .notes(normalizeOptional(request.notes()))
                 .status(OrderItemStatus.DRAFT)
-                .subtotal(unitPrice.multiply(BigDecimal.valueOf(request.quantity())))
+                .subtotal(
+                        unitPrice.multiply(
+                                BigDecimal.valueOf(
+                                        request.quantity()
+                                )
+                        )
+                )
                 .build();
-        selectedOptions.forEach(option -> item.addOption(OrderItemOption.builder()
-                .productOption(option)
-                .groupNameSnapshot(option.getGroup().getName())
-                .optionNameSnapshot(option.getName())
-                .additionalPriceSnapshot(option.getAdditionalPrice())
-                .build()));
+
+        selectedOptions.forEach(option ->
+                item.addOption(
+                        OrderItemOption.builder()
+                                .productOption(option)
+                                .groupNameSnapshot(
+                                        option.getGroup().getName()
+                                )
+                                .optionNameSnapshot(
+                                        option.getName()
+                                )
+                                .additionalPriceSnapshot(
+                                        option.getAdditionalPrice()
+                                )
+                                .build()
+                )
+        );
+
         return item;
     }
 
-    private void transitionAll(List<OrderItem> items, OrderItemStatus current, OrderItemStatus next) {
-        List<OrderItem> applicable = items.stream().filter(item -> item.getStatus() == current).toList();
-        if (applicable.isEmpty()) throw new BusinessException("Pedido não possui itens nesta etapa");
-        applicable.forEach(item -> item.setStatus(next));
+    private void transitionAll(
+            List<OrderItem> items,
+            OrderItemStatus current,
+            OrderItemStatus next
+    ) {
+        List<OrderItem> applicable = items.stream()
+                .filter(item -> item.getStatus() == current)
+                .toList();
+
+        if (applicable.isEmpty()) {
+            throw new BusinessException(
+                    "Pedido não possui itens nesta etapa"
+            );
+        }
+
+        applicable.forEach(
+                item -> item.setStatus(next)
+        );
     }
 
-    private void cancelItemState(OrderItem item, String reason, User actor) {
+    private void cancelItemState(
+            OrderItem item,
+            String reason,
+            User actor
+    ) {
         item.setStatus(OrderItemStatus.CANCELED);
         item.setCancellationReason(reason);
         item.setCancelledAt(LocalDateTime.now());
         item.setCancelledByUser(actor);
     }
 
-    private void ensureCancelable(RestaurantOrder order, Tab tab) {
+    private void ensureCancelable(
+            RestaurantOrder order,
+            Tab tab
+    ) {
         if (order.getStatus() == OrderStatus.DELIVERED) {
-            throw new BusinessException("Pedido entregue n\u00e3o pode ser cancelado");
+            throw new BusinessException(
+                    "Pedido entregue não pode ser cancelado"
+            );
         }
+
         if (tab.getStatus() == TabStatus.CLOSED) {
-            throw new BusinessException("Pedido de comanda fechada não pode ser cancelado");
+            throw new BusinessException(
+                    "Pedido de comanda fechada não pode ser cancelado"
+            );
         }
+
         if (paymentRepository.existsByTabId(tab.getId())) {
-            throw new BusinessException("N\u00e3o \u00e9 poss\u00edvel cancelar um pedido de uma comanda com pagamentos registrados");
+            throw new BusinessException(
+                    "Não é possível cancelar um pedido de uma comanda com pagamentos registrados"
+            );
         }
     }
 
     private void ensureTabCanReceiveOrder(Tab tab) {
         ensureTabOpen(tab);
-        if (tab.getType() == TabType.TABLE && paymentRepository.existsByTabId(tab.getId())) {
+
+        if (
+                tab.getType() == TabType.TABLE &&
+                        paymentRepository.existsByTabId(tab.getId())
+        ) {
             accountingService.refreshAmounts(tab);
-            if (accountingService.remainingAmount(tab).signum() == 0) {
-                throw new BusinessException("A comanda já foi paga. Não é possível adicionar novos pedidos.");
+
+            if (
+                    accountingService
+                            .remainingAmount(tab)
+                            .signum() == 0
+            ) {
+                throw new BusinessException(
+                        "A comanda já foi paga. Não é possível adicionar novos pedidos."
+                );
             }
         }
     }
 
     private void ensureTabOpen(Tab tab) {
         if (tab.getStatus() != TabStatus.OPEN) {
-            throw new BusinessException("Comanda fechada ou cancelada não pode receber pedido");
+            throw new BusinessException(
+                    "Comanda fechada ou cancelada não pode receber pedido"
+            );
         }
     }
 
@@ -414,65 +813,79 @@ public class RestaurantOrderService {
         ensureTabOpen(order.getTab());
     }
 
+    private void ensureOperationalAccess() {
+        if (
+                !authenticatedUserProvider.currentUserHasAnyRole(
+                        "OWNER",
+                        "ADMIN"
+                )
+        ) {
+            throw new AccessDeniedException(
+                    "Acesso permitido apenas para dono ou gerente"
+            );
+        }
+    }
+
     private RestaurantOrder findEntityById(Long id) {
         return orderRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Pedido não encontrado"));
+                .orElseThrow(
+                        () -> new ResourceNotFoundException(
+                                "Pedido não encontrado"
+                        )
+                );
     }
 
     private RestaurantOrder findEntityByIdForUpdate(Long id) {
         return orderRepository.findByIdForUpdate(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Pedido não encontrado"));
+                .orElseThrow(
+                        () -> new ResourceNotFoundException(
+                                "Pedido não encontrado"
+                        )
+                );
     }
 
     private User currentUser() {
         return authenticatedUserProvider.currentUser()
-                .orElseThrow(() -> new BusinessException("Usuário autenticado é obrigatório"));
-    }
-
-    private boolean canCurrentUserAccess(RestaurantOrder order) {
-        return order.getTab().getType() != TabType.COUNTER
-                || authenticatedUserProvider.currentUser().isEmpty()
-                || authenticatedUserProvider.currentUserHasAnyRole("OWNER", "ADMIN", "CASHIER");
-    }
-
-    private void ensureCounterOperatorAccess(Tab tab) {
-        if (tab.getType() == TabType.COUNTER
-                && authenticatedUserProvider.currentUser().isPresent()
-                && !authenticatedUserProvider.currentUserHasAnyRole("OWNER", "ADMIN", "CASHIER")) {
-            throw new AccessDeniedException("Acesso ao atendimento de balcão não permitido");
-        }
-    }
-
-    private void ensureItemTransitionAccess(RestaurantOrder order, OrderItemStatus target) {
-        boolean kitchenOnly = authenticatedUserProvider.currentUserHasAnyRole("KITCHEN")
-                && !authenticatedUserProvider.currentUserHasAnyRole("OWNER", "ADMIN");
-        if (kitchenOnly && target != OrderItemStatus.READY) {
-            throw new AccessDeniedException("O perfil de preparo pode somente marcar itens em preparo como prontos");
-        }
-        if (order.getTab().getType() == TabType.COUNTER
-                && !kitchenOnly
-                && authenticatedUserProvider.currentUser().isPresent()
-                && !authenticatedUserProvider.currentUserHasAnyRole("OWNER", "ADMIN", "CASHIER")) {
-            throw new AccessDeniedException("Acesso ao atendimento de balcão não permitido");
-        }
+                .orElseThrow(
+                        () -> new BusinessException(
+                                "Usuário autenticado é obrigatório"
+                        )
+                );
     }
 
     private void ensureCounterPaidBeforeDelivery(Tab tab) {
-        if (tab.getType() != TabType.COUNTER) return;
+        if (tab.getType() != TabType.COUNTER) {
+            return;
+        }
+
         accountingService.refreshAmounts(tab);
-        if (accountingService.remainingAmount(tab).signum() > 0) {
-            throw new BusinessException("Quite a venda de balcão antes de marcar itens como entregues");
+
+        if (
+                accountingService
+                        .remainingAmount(tab)
+                        .signum() > 0
+        ) {
+            throw new BusinessException(
+                    "Quite a venda de balcão antes de marcar itens como entregues"
+            );
         }
     }
 
-    private RestaurantOrderResponse toResponse(RestaurantOrder order, List<OrderItem> items) {
+    private RestaurantOrderResponse toResponse(
+            RestaurantOrder order,
+            List<OrderItem> items
+    ) {
         return new RestaurantOrderResponse(
                 order.getId(),
                 order.getTab().getId(),
                 order.getTab().getStatus(),
                 order.getTab().getType(),
                 tabDisplayLabel(order.getTab()),
-                order.getTab().getRestaurantTable() == null ? null : order.getTab().getRestaurantTable().getId(),
+                order.getTab().getRestaurantTable() == null
+                        ? null
+                        : order.getTab()
+                        .getRestaurantTable()
+                        .getId(),
                 tableNumber(order.getTab()),
                 order.getStatus(),
                 order.getType(),
@@ -483,36 +896,55 @@ public class RestaurantOrderService {
                 order.getCancellationReason(),
                 order.getCreatedAt(),
                 order.getUpdatedAt(),
-                items.stream().map(this::toItemResponse).toList()
+                items.stream()
+                        .map(this::toItemResponse)
+                        .toList()
         );
     }
 
     private OrderType orderTypeFor(Tab tab) {
-        return tab.getType() == TabType.COUNTER ? OrderType.COUNTER : OrderType.TABLE;
+        return tab.getType() == TabType.COUNTER
+                ? OrderType.COUNTER
+                : OrderType.TABLE;
     }
 
     private String tabDisplayLabel(Tab tab) {
         if (tab.getType() == TabType.COUNTER) {
-            String customer = normalizeOptional(tab.getCustomerName());
-            return customer == null ? "Balcão #" + tab.getId() : "Balcão #" + tab.getId() + " - " + customer;
+            String customer =
+                    normalizeOptional(tab.getCustomerName());
+
+            return customer == null
+                    ? "Balcão #" + tab.getId()
+                    : "Balcão #" + tab.getId()
+                      + " - " + customer;
         }
+
         Integer number = tableNumber(tab);
-        return number == null ? "Mesa sem número" : "Mesa " + number;
+
+        return number == null
+                ? "Mesa sem número"
+                : "Mesa " + number;
     }
 
     private Integer tableNumber(Tab tab) {
         if (tab.getTableNumber() != null) {
             return tab.getTableNumber();
         }
-        return tab.getRestaurantTable() == null ? null : tab.getRestaurantTable().getNumber();
+
+        return tab.getRestaurantTable() == null
+                ? null
+                : tab.getRestaurantTable().getNumber();
     }
 
     private OrderItemResponse toItemResponse(OrderItem item) {
         ProductVariant variant = item.getProductVariant();
+
         return new OrderItemResponse(
                 item.getId(),
                 item.getProduct().getId(),
-                variant == null ? null : variant.getId(),
+                variant == null
+                        ? null
+                        : variant.getId(),
                 item.getProductNameSnapshot(),
                 item.getProductVariantNameSnapshot(),
                 displayName(item),
@@ -523,26 +955,44 @@ public class RestaurantOrderService {
                 item.getNotes(),
                 item.getStatus(),
                 item.getSubtotal(),
-                item.getOptions().stream().map(option -> new OrderItemOptionResponse(
-                        option.getId(),
-                        option.getProductOption() == null ? null : option.getProductOption().getId(),
-                        option.getGroupNameSnapshot(),
-                        option.getOptionNameSnapshot(),
-                        option.getAdditionalPriceSnapshot()
-                )).toList(),
+                item.getOptions()
+                        .stream()
+                        .map(option ->
+                                new OrderItemOptionResponse(
+                                        option.getId(),
+                                        option.getProductOption() == null
+                                                ? null
+                                                : option.getProductOption()
+                                                .getId(),
+                                        option.getGroupNameSnapshot(),
+                                        option.getOptionNameSnapshot(),
+                                        option.getAdditionalPriceSnapshot()
+                                )
+                        )
+                        .toList(),
                 item.getCancellationReason()
         );
     }
 
     private String displayName(OrderItem item) {
-        String variantName = item.getProductVariantNameSnapshot();
-        if (variantName == null || "Padrao".equalsIgnoreCase(variantName) || "Padrão".equalsIgnoreCase(variantName)) {
+        String variantName =
+                item.getProductVariantNameSnapshot();
+
+        if (
+                variantName == null ||
+                        "Padrao".equalsIgnoreCase(variantName) ||
+                        "Padrão".equalsIgnoreCase(variantName)
+        ) {
             return item.getProductNameSnapshot();
         }
-        return item.getProductNameSnapshot() + " - " + variantName;
+
+        return item.getProductNameSnapshot()
+                + " - " + variantName;
     }
 
     private String normalizeOptional(String value) {
-        return value == null || value.isBlank() ? null : value.trim();
+        return value == null || value.isBlank()
+                ? null
+                : value.trim();
     }
 }
